<resources>
    <string name="app_name">调试模式</string>
    <string name="app_info">应用信息</string>
    <string name="model_info">机器信息</string>

    <string name="os_version_value">系统版本号:%1$s</string>
    <string name="os_api_value">系统版本值:%1$s</string>
    <string name="device_model_value">手机型号:%1$s</string>
    <string name="iid_value">IID:%1$s</string>
    <string name="line_devide_value">线上DeviceID:%1$s</string>
    <string name="imei_value">手机IMEI:%1$s</string>
    <string name="android_id_value">AndroidID:%1$s</string>
    <string name="uuid_value">UUID:%1$s</string>
    <string name="device_brand_value">手机品牌:%1$s</string>

    <string name="debug_url">调试地址</string>
    <string name="server_url">服务器地址:</string>
    <string name="old_server_url">原服务器地址:%1$s</string>
    <string name="default_url">默认地址</string>
    <string name="use_url">应用地址</string>
    <string name="clear_app_cache">清空应用信息</string>
    <string name="error_url_info">异常URL信息</string>
    <string name="run_info">运行信息</string>
    <string name="article_cache">文章信息</string>
    <string name="debug_info">调试信息</string>

    <string name="channel_value">渠道号:%1$s</string>
    <string name="app_version_value">应用版本:%1$s</string>
    <string name="app_code_value">应用版本号:%1$s</string>
    <string name="debug_mode">调试模式</string>
    <string name="debug_list">调试功能列表</string>
    <string name="log_switch">Log日志</string>
    <string name="network_desc_value">描述:%1$s</string>
    <string name="path_value">路径:%1$s</string>
    <string name="url_value">Url:%1$s</string>
    <string name="empty_info">信息不能为空</string>
    <string name="changed_net_url">修改Url</string>
    <string name="add_net_url">添加Url</string>
    <string name="changed">更变</string>
    <string name="input_url_hint">请输入url</string>
    <string name="server_url_message">选择或编辑一个url地址赋予接口,此接口将使用这个编辑后的服务器地址.</string>
    <string name="add_server_url_message">添加一个url地址,此接口将被记录,并作拦截配置接口列表使用.</string>
    <string name="apply_default_url">应用默认Url</string>
    <string name="applySharedPrefsChanged">应用</string>
    <string name="changed_complete">修改成功</string>
    <string name="global_change_url_info">全局修改所有url信息,第1个为默认应用url,其他为备选,并可以动态编辑并应用</string>
    <string name="restored_complete">恢复默认设置成功</string>
    <string name="set_edit_complete">设置Url成功</string>
    <string name="debug_image">调试图片</string>
    <string name="show_border">显示边界</string>
    <string name="show_aspect_ratio">显示比例</string>
    <string name="show_image">显示图片</string>
    <string name="info_value">说明:%1$s</string>
    <string name="item_count_value">条目个数:%1$s</string>
    <string name="aspect_ratio_value">宽高比:%1$s</string>
    <string name="padding_value">横向边距:%1$s 纵向边距:%2$s 条目边距:%3$s</string>
    <string name="image_type_value">展示类型:%1$s</string>
    <string name="aspect_ratio">高宽比</string>
    <string name="horizontal_padding">横向边距</string>
    <string name="vertical_padding">纵向边距</string>
    <string name="item_padding">条目边距</string>
    <string name="banner">Banner</string>
    <string name="item_type">条目类型</string>
    <string name="horizontal_padding_value">横向边距:%1$s DP:%2$s</string>
    <string name="vertical_padding_value">纵向边距:%1$s DP:%2$s</string>
    <string name="item_padding_value">条目边距:%1$s DP:%2$s</string>
    <string name="edit_image_format">编辑图片格式</string>
    <string name="list">List</string>
    <string name="set_background_transparent">设置背景透明</string>
    <string name="debug_image_list">预览图片列表</string>
    <string name="debug_item">条目设定</string>
    <string name="debug_view">调试控件数据</string>
    <string name="look_image">查看图片信息</string>
    <string name="debug_web">查看WebView信息</string>
    <string name="go_website">跳转浏览器</string>
    <string name="go_website_image">查看网页图片</string>
    <string name="image_size_value">图片宽:%1$d高:%2$d</string>
    <string name="image_info_value">文件大小:%1$s\nBitmap:%2$s</string>
    <string name="web_view_loading">网页正在加载中...</string>
    <string name="wait">请稍等</string>
    <string name="item_info">条目信息</string>
    <string name="share">分享</string>

    <string name="content_share_to">内容分享到</string>
    <string name="copy">复制</string>
    <string name="copy_complete">内容己复制</string>
    <string name="look_up_view">查看当前控件\n%1$s</string>
    <string name="activity_compat_hint">当前Activity必须为FragmentActivity</string>
    <string name="view_tag_error">获取View-Tag失败</string>
    <string name="no_view_tag">没有配置View-Tag</string>
    <string name="view_extras">控件附加信息查看</string>

    <string name="death_value">层级:%1$d</string>
    <string name="last_modify_value">最后修改时间:%1$s</string>
    <string name="add_shared_prefs">添加配置</string>
    <string name="prefs_type">配置类型</string>
    <string name="insert">插入</string>
    <string name="prefs_boolean">布尔类型:</string>
    <string name="prefs_set">编辑Set配置项:</string>
    <string name="edit_shared_prefs">编辑配置项</string>
    <string name="edit_shared_prefs_value">编辑配置:%1$s</string>
    <string name="remove_prefs_value">移除:%1$s 成功!</string>
    <string name="update_shared_prefs_value">更改配置:%1$s</string>
    <string name="update">更新</string>
    <string name="update_shared_prefs_complete">更新配置项完成!</string>
    <string name="set_prefs_value">Set配置项(以/隔开输入多个)</string>
    <string name="input_shared_prefs_key">请输入配置项键</string>
    <string name="input_shared_prefs_value">请输入配置项值</string>
    <string name="add_shared_prefs_complete">添加配置项完成</string>
    <string name="update_shared_prefs_failed">操作配置项失败</string>
    <string name="shared_prefs_value_error">修改配置项值可能越界或不正常,修改失败!</string>
    <string name="remove_prefs_value_fail">删除:%1$s失败,请检测</string>
    <string name="add_shared_prefs_exists">添加:%1$s 己存在!</string>
    <string name="exception_list">异常列表</string>
    <string name="exception_detail">异常详情</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="no_database">很抱歉,没有检测到数据库文件!</string>
    <string name="exit">离开</string>
    <string name="no_shared_prefs">很抱歉,没有检测到配置文件!</string>
    <string name="invalid_database">无效的数据库信息</string>
    <string name="data_operator">数据操作</string>
    <string name="delete_data">是否删除数据?</string>
    <string name="add_database">添加数据</string>
    <string name="activity_hierarchy">界面视图</string>
    <string-array name="edit_sp_array">
        <item>编辑条目</item>
        <item>删除条目</item>
    </string-array>

    <string-array name="edit_db_array">
        <item>编辑数据</item>
        <item>删除数据</item>
    </string-array>

    <string name="file_permission_hint">\t\t1:当系统版本大于等于4.4时，
        对通过上面4个API调用得到的目录进行文件的读写操作不需要申请SD卡的读写权限，
        所以6.0及以上系统使用时也不需要动态申请读写权限\n
        \t\t2:二个目录分别对应 设置->应用->应用详情里面的”清除数据“与”清除缓存“选项</string>
    <string name="no_file_found">找不到更多文件了</string>
    <string name="debug_switch">调试开关</string>
    <string name="debug_memory_view">展示内存视图</string>
    <string name="debug_view_border">显示控件边距</string>
    <string name="debug_hierarchy_view">调试界面视图</string>
    <string name="debug_custom_switch">自定义开关</string>
    <string name="network_list">接口列表</string>
    <string name="delete_file_item">是否删除本文件</string>
    <string name="show_memory">内存信息</string>
    <string name="show_hierarchy">显示视图</string>
    <string name="view_developer">界面调试</string>
    <string name="response_result">响应结果:</string>
    <string name="request_params">请求参数</string>
    <string name="request_headers">请求头</string>
    <string name="request_entity">请求实体</string>
    <string name="shared_file">分享文件</string>
    <string name="shared_file_hint">分享文本过大,建议直接分享文件.</string>

    <string-array name="debug_array">
        <item>界面视图</item>
        <item>内存视图</item>
        <item>显示边界</item>
    </string-array>

    <string-array name="shard_request_data">
        <item>请求体</item>
        <item>响应体</item>
        <item>响应结果</item>
    </string-array>
</resources>
