<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divide"
        android:background="@color/white"
        android:dividerHeight="@dimen/divideSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:layout_gravity="end">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <CheckBox
                android:id="@+id/cb_show_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_border"/>

            <CheckBox
                android:id="@+id/cb_show_aspect_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_aspect_ratio"/>

            <CheckBox
                android:id="@+id/cb_show_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_image"/>
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
