<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <cz.developer.library.widget.ThumbView
            android:id="@+id/tv_thumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary" />
    </ScrollView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sv_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_gravity="end"
        android:padding="12dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:textColor="?textColor"/>

            <TextView
                android:id="@+id/tv_aspect_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspect_ratio"/>

            <SeekBar
                android:id="@+id/sb_aspect_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horizontal_padding"/>

            <SeekBar
                android:id="@+id/sb_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_vertical_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertical_padding"/>

            <SeekBar
                android:id="@+id/sb_vertical_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_item_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_padding"/>

            <SeekBar
                android:id="@+id/sb_item_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_type"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <RadioButton
                    android:id="@+id/rb_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banner"
                    android:enabled="false"/>

                <RadioButton
                    android:id="@+id/rb_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    android:enabled="false"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="4dp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/iv_remove_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_round_button_selector"
                    android:src="@drawable/ic_chevron_left_white"
                    auto:layout_constraintTop_toTopOf="parent"
                    auto:layout_constraintBottom_toBottomOf="parent"
                    auto:layout_constraintRight_toLeftOf="@+id/tv_value"/>

                <TextView
                    android:id="@+id/tv_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    auto:layout_constraintLeft_toRightOf="@+id/iv_remove_value"
                    auto:layout_constraintRight_toLeftOf="@+id/iv_add_value"
                    auto:layout_constraintTop_toTopOf="parent"
                    auto:layout_constraintBottom_toBottomOf="parent"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="?colorPrimary"/>

                <ImageView
                    android:id="@+id/iv_add_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_round_button_selector"
                    android:src="@drawable/ic_chevron_right_white"
                    auto:layout_constraintTop_toTopOf="parent"
                    auto:layout_constraintBottom_toBottomOf="parent"
                    auto:layout_constraintRight_toRightOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <Switch
                android:id="@+id/st_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?textColor"
                android:text="@string/set_background_transparent" />
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>
