<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        auto:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="4dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/developerHorizontalPadding"
            android:paddingRight="@dimen/developerHorizontalPadding">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefs_type"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/typeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@+id/intButton">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/intButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="INTEGER"
                    android:textSize="11sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/longButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LONG"
                    android:textSize="11sp"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/boolButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BOOLEAN"
                    android:textSize="11sp"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/stringButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="STRING"
                    android:textSize="11sp"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/floatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FLOAT"
                    android:textSize="11sp"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/setButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SET"
                    android:textSize="11sp"/>

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_shared_prefs_key">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fieldName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ViewStub
                    android:id="@+id/valueViewStub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout="@layout/edit_form_item"/>

                <ViewStub
                    android:id="@+id/boolViewStub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout="@layout/shared_prefs_bool_item"/>

                <LinearLayout
                    android:id="@+id/setLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prefs_set"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />


                    <android.support.v7.widget.LinearLayoutCompat
                        android:id="@+id/valueEditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        auto:divider="@drawable/developer_divider_shape"
                        auto:showDividers="middle">

                        <include
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            layout="@layout/add_edit_from_item"/>

                    </android.support.v7.widget.LinearLayoutCompat>
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addEditButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="6dp"
            android:layout_marginTop="4dp"
            android:alpha="0"
            android:clickable="false"
            android:src="@drawable/ic_add_white_36dp"
            android:layout_gravity="right"
            android:background="@drawable/developer_primary_oval_shape"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_36dp"
            android:layout_marginTop="12dp"
            auto:backgroundTint="?colorAccent"
            auto:rippleColor="?colorAccent"
            auto:elevation="3dp"
            auto:pressedTranslationZ="4dp"/>
    </LinearLayout>

</RelativeLayout>